[gd_scene load_steps=4 format=3 uid="uid://owpaq245hh2l"]

[ext_resource type="Script" path="res://src/main.gd" id="1_sla8m"]
[ext_resource type="PackedScene" uid="uid://q772sl7sx1ey" path="res://src/Entities/Player/player_character.tscn" id="1_wblpv"]
[ext_resource type="Script" path="res://src/spawn_manager.gd" id="4_k52d0"]

[node name="Main" type="Node"]
script = ExtResource("1_sla8m")

[node name="PlayerCharacter" parent="." instance=ExtResource("1_wblpv")]
unique_name_in_owner = true
move_speed = 20000.0

[node name="Enemies" type="Node" parent="."]

[node name="SpawnManager" type="Node" parent="."]
script = ExtResource("4_k52d0")

[node name="EnemySpawn1" type="Marker2D" parent="SpawnManager"]

[node name="EnemySpawn2" type="Marker2D" parent="SpawnManager"]
position = Vector2(1153, 3)

[node name="EnemySpawnTimer" type="Timer" parent="SpawnManager"]
wait_time = 10.0

[connection signal="timeout" from="SpawnManager/EnemySpawnTimer" to="SpawnManager" method="_on_enemy_spawn_timer_timeout"]
